# my-blog

./: Cargo.toml  Dockerfile  README.md  bun.lockb  tailwind.config.js
.github/workflows/: docker-image.yml
public/: output.css  script.js  styles.css
src/: main.rs
src/db/: connection.rs  queries.rs
src/markdown/: first.md
src/models/: article.rs
src/views/: index.hbs
src/views/partials/: articles.hbs  content.hbs  footer.hbs  head.hbs  nav.hbs
