[package]
name = "blog-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
handlebars = { version = "5.1.2", features = ["dir_source"] }
tracing = "0.1.40"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
markdown = "1.0.0-alpha.18"
sqlx = { version = "0.7.3", features = ["tls-native-tls", "runtime-tokio", "uuid", "postgres", "migrate", "time", "bigdecimal", "macros"] }
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
serde_json = "1.0.122"
chrono = { version = "0.4.38", features = ["serde"] }
serde_urlencoded = "0.7.1"
